--- a/predavaci-protokol/css/style.css
+++ b/predavaci-protokol/css/style.css
@@ -1,7 +1,3 @@
-.dbg {
-    border: 1px dashed black;
-}
-
 .container {
     max-width: 750px;
     margin-left: auto;
@@ -54,12 +50,12 @@
     min-height: 138px;
 }
 
-.predavajici {
-    float: right;
+.float-left {
+    float: left;
 }
 
-.prebirajici {
-    float: left;
+.float-right {
+    float: right;
 }
 
 .predavajici > p {
@@ -73,7 +69,7 @@
 }
 
 .zavady {
-    min-height: 333px;
+    min-height: 256px;
     margin-top: 16px;
 }
 
@@ -96,11 +92,11 @@
     float: right;
     width: 39%;
     margin-top: 12px;
-    line-height: 1.8em;
 }
 
 .terminy > div {
     padding-left: 8px!important;
+    line-height: 1.8em;
 }
 
 .terminy > .poznamka {
@@ -109,8 +105,12 @@
     padding: 8px;
 }
 
+.terminy, .sluzby {
+    min-height: 140px;
+}
+
 .podpisy {
-    min-height: 105px!important;
+    min-height: 128px!important;
 }
 
 .podpisy > #podpis-predavajici, #podpis-prebirajici {
@@ -120,15 +120,23 @@
     text-decoration: underline;
 }
 
-.podpisy > #podpis-predavajici{
+.podpisy_vraceni > #podpis-predavajici{
     float: right;
 }
 
-.podpisy > #podpis-prebirajici{
+.podpisy_vraceni > #podpis-prebirajici{
     float: left;
 }
 
-.podpisy > .info {
+.podpisy_prevzeti > #podpis-predavajici{
+    float: left;
+}
+
+.podpisy_prevzeti > #podpis-prebirajici{
+    float: right;
+}
+
+.info {
     color: darkslategrey;
     padding: 4px;
 }
@@ -145,4 +153,6 @@
     height: 8px!important;
 }
 
-
+.space2 {
+    height: 2px!important;
+}
